# kimss-python-sdk

./: .gitignore  .llms.txt  .mcp.json  CHANGELOG.md  CONTRIBUTING.md  LICENSE  MANIFEST.in  README.md  mcp.json  pyproject.toml  smithery.yaml
.cursor-plugin/: plugin.json
.cursor/rules/: architecture-vault.mdc
.github/workflows/: ci.yml  publish.yml
.plugin/: plugin.json
commands/: kimss-create-agent.md  kimss-diagnose.md  kimss-setup.md
docs/: llm-context.md
examples/: 01_quickstart_chat.py  02_create_agent.py  03_upload_and_attach_file.py  04_models_completion.py  05_handle_errors.py  06_run_mcp_server.py
kimss/: __init__.py  client.py  environment.py  errors.py  privacy.py
kimss/mcp/: __init__.py  __main__.py  server.py  tools.py
kimss/telemetry/: __init__.py  context.py
mcpb/: manifest.json
rules/: kimss-product.mdc
skills/kimss-mcp-setup/: SKILL.md
skills/kimss-sdk/: SKILL.md
tests/: test_agents_run.py  test_client_headers.py  test_errors_mapping.py  test_mcp_tools.py
