[build-system]
requires = ["setuptools>=61", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "kimss"
version = "0.1.0"
description = "Kimss Python SDK for conversational AI agents"
readme = "README.md"
requires-python = ">=3.9"
license = "MIT"
dependencies = [
    "requests>=2.28",
]
classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Libraries :: Python Modules",
]

[project.optional-dependencies]
dev = [
    "pytest>=7",
]
privacy = [
    "presidio-analyzer>=2.2",
    "presidio-anonymizer>=2.2",
    "spacy>=3.7",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["kimss*"]
